tests/baselines/reference/noErrorsInCallback.errors.txt
noErrorsInCallback.ts(4,19): error TS2345: Argument of type '{}' is not assignable to parameter of type 'string'.
noErrorsInCallback.ts(6,23): error TS2345: Argument of type '{}' is not assignable to parameter of type 'string'.


==== noErrorsInCallback.ts (2 errors) ====
    class Bar {
        constructor(public foo: string) { }
    }
    var one = new Bar({}); // Error
                      ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type 'string'.
    [].forEach(() => {
        var two = new Bar({}); // No error?
                          ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type 'string'.
    });
     